--- a/notebooks/eval-models.ipynb
+++ b/notebooks/eval-models.ipynb
@@ -390,7 +390,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:nba_betting:Training ensemble with: ['defence_logistic_regression', 'offence_logistic_regression', 'efficiency_logistic_regression']\n"
+      "INFO:nba_betting:Training ensemble with: ['defence_logistic_regression', 'offence_logistic_regression', 'efficiency_logistic_regression']\n",
+      "INFO:nba_betting:Training set score: 0.6312551271534045\n",
+      "INFO:nba_betting:Testing set score: 0.5396498455200824\n"
      ]
     }
    ],
@@ -420,6 +422,7 @@
     "        \"max_depth\": [1, 2, 3],\n",
     "        \"ccp_alpha\": [0, 0.05, 0.1],\n",
     "    },\n",
+    "    n_jobs=4,\n",
     ")\n",
     "weight_learner = GridSearchCV(\n",
     "    estimator=RandomForestRegressor(),\n",
@@ -429,6 +432,7 @@
     "        \"max_depth\": [1, 2, 3],\n",
     "        \"ccp_alpha\": [0, 0.05, 0.1],\n",
     "    },\n",
+    "    n_jobs=4,\n",
     ")\n",
     "\n",
     "unsupervised_ensemble = UnsupervisedEnsemble(\n",
